--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
  
 	<link rel="stylesheet" href="/static/style.css" type="text/css" media="all" /> 
 	<link rel="stylesheet" href="/static/print.css" type="text/css" media="print" /> 
+	<link rel="stylesheet" href="/static/syntax.css" type="text/css" media="all" /> 
 </head> 
  
 <body> 
