adding placeholder about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 			<li id="recent-posts-2" class="widget widget_pages">
 				<h2 class="widgettitle">Meta</h2> 
 				<ul> 
-					<li><a href="/">About</a></li>
+					<li><a href="/about.html">About</a></li>
 					<li><a href="/">Contact Me</a></li>
 				</ul> 
 			</li> 
