--- a/static/style.css
+++ b/static/style.css
@@ -61,11 +61,35 @@ html {
 */
 
 /*	Some defaults. Change the font size here to shrink or enlarge the whole design */
+@font-face {
+    font-family: 'UbuntuRegular';
+    src: url('fonts/Ubuntu-R-webfont.eot');
+    src: url('fonts/Ubuntu-R-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/Ubuntu-R-webfont.woff') format('woff'),
+         url('fonts/Ubuntu-R-webfont.ttf') format('truetype'),
+         url('fonts/Ubuntu-R-webfont.svg#UbuntuRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'UbuntuMonoRegular';
+    src: url('fonts/UbuntuMono-R-webfont.eot');
+    src: url('fonts/UbuntuMono-R-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/UbuntuMono-R-webfont.woff') format('woff'),
+         url('fonts/UbuntuMono-R-webfont.ttf') format('truetype'),
+         url('fonts/UbuntuMono-R-webfont.svg#UbuntuMonoRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body {
 	background-color: #fff;
 	color: #888;
 	font-size: 0.76em; /* 2007-10-17, changed from: 0.66em; */
-	font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
+	font-family: 'UbuntuRegular', 'Lucida Grande', Verdana, Arial, Sans-Serif;
 	line-height: 1.4;
 	margin: 0;
 	padding: 0;
@@ -84,9 +108,8 @@ a:hover {
 	color: #0b3;
 	}
 
-/*	Most headers use the thinner Trebuchet font */
 h1, h2, h3, h4, h5 {
-	font-family: 'Trebuchet MS', 'Lucida Grande', Verdana, Arial, Sans-Serif;
+	font-family: 'UbuntuRegular', 'Lucida Grande', Verdana, Arial, Sans-Serif;
 	font-weight: bold;
 	line-height: normal;
 	margin: 0;
@@ -155,7 +178,7 @@ p {
 
 /*	The main headers within the side bar are in upper case & in the wider font */
 #sidebar h2 {
-	font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
+	font-family: 'UbuntuRegular', 'Lucida Grande', Verdana, Arial, Sans-Serif;
 	font-size: 1.2em;
 	text-transform: uppercase;
 	margin: 0;
@@ -203,7 +226,7 @@ p {
 /*	The text box of the search form has space above it, and a little below too
 	Can't say font: inherit as IE don't get it */
 #searchform .s {
-	font: 1em 'Lucida Grande', Verdana, Arial, Sans-Serif;
+	font: 1em 'UbuntuRegular', 'Lucida Grande', Verdana, Arial, Sans-Serif;
 	width: 8em;
 	margin: 1em 0 0.24em 0;
 	padding: 0;
@@ -221,7 +244,7 @@ p {
 	margin: 4em 0 1em 0;
 	padding: 0.2em 0 0 0;
 	border-top: 1px solid #888;
-	font-family: 'Lucida Grande', Arial, Verdana, Sans-Serif;
+	font-family: 'UbuntuRegular', 'Lucida Grande', Arial, Verdana, Sans-Serif;
 	}
 
 /*	content includes everything between the header and the footer. Body text dark gray */
@@ -243,7 +266,7 @@ h2.pagetitle {
 .navigation {
 	margin: 0 0 1.6em 0;
 	padding: 0 0 1px 0;
-	font-family: 'Lucida Grande', Arial, Verdana, Sans-Serif;
+	font-family: 'UbuntuRegular', 'Lucida Grande', Arial, Verdana, Sans-Serif;
 	font-size: 1.2em;
 	}
 
@@ -361,7 +384,7 @@ h3.comments {
 
 /*	Can't say font: inherit; as IE don't get it */
 .commentlist li, #commentform input, #commentform textarea {
-	font: 1em 'Lucida Grande', Verdana, Arial, Sans-Serif;
+	font: 1em 'UbuntuRegular', 'Lucida Grande', Verdana, Arial, Sans-Serif;
 	}
 
 /*	Comment paragraphs are indented by 0.6em */
@@ -488,7 +511,7 @@ ol li {
 
 /*	Code should be used for just a few words.. */
 code {
-	font: 1.1em 'Courier New', Courier, Monospace;
+	font: 1.1em 'UbuntuMonoRegular', 'Courier New', Courier, Monospace;
 	}
 
 /*	..and the pre tag works better for whole code excerpts */
@@ -497,7 +520,7 @@ pre {
 	color: black;
 	padding: 0.6em 0 0.6em 0.6em;
 	margin: 0 0 1em 0;
-	font: 1.1em 'Courier New', Courier, Monospace;
+	font: 1.1em 'UbuntuMonoRegular', 'Courier New', Courier, Monospace;
 	white-space: pre;
 	overflow: auto;
 	border: 1px solid #ddd;
@@ -546,7 +569,7 @@ em, i {
 /*	Match the sidebar h2 settings so the month caption appears as any other heading.
 	Width 100% seems required for Firefox to right-align the caption. */
 #wp-calendar caption {
-	font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
+	font-family: 'UbuntuRegular', 'Lucida Grande', Verdana, Arial, Sans-Serif;
 	font-size: 1.2em;
 	font-style: normal;
 	font-weight: bold;
