--- a/static/style.css
+++ b/static/style.css
@@ -62,7 +62,7 @@
 body {
 	background-color: #fff;
 	color: #888;
-	font-size: 0.76em; /* 2007-10-17, changed from: 0.66em; */
+	font-size: 0.8em;
 	font-family: 'UbuntuRegular', 'Lucida Grande', Verdana, Arial, Sans-Serif;
 	line-height: 1.4;
 	margin: 0;
