--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
 				<h2 class="widgettitle">Meta</h2> 
 				<ul> 
 					<li><a href="/about.html">About</a></li>
+					<li><a href="/all_posts.html">All Posts</a></li>
 				</ul> 
 			</li> 
 		</ul>
