--- a/static/wilfred.css
+++ b/static/wilfred.css
@@ -3,3 +3,13 @@ p code {
   color: rgba(0, 0, 0, 0.75);
   padding: 1px 3px;	
 }
+
+.all-posts ul li {
+	font-size: 1.2em;
+	list-style-type: none;
+	padding-bottom: 0.3em;
+}
+
+.all-posts ul {
+	padding: 0;
+}
