adding RSS feed, based on https://github.com/coyled/coyled.com/blob/master/rss.xml

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,12 @@
 					<li><a href="/about.html">About</a></li>
 					<li><a href="/all_posts.html">All Posts</a></li>
 				</ul> 
+			</li>
+			<li id="recent-posts-2" class="widget widget_pages">
+				<h2 class="widgettitle">Feed</h2> 
+				<ul> 
+					<li><a type="application/rss+xml" href="/rss.xml">RSS</a></li>
+				</ul> 
 			</li> 
 		</ul>
 	</div>
