--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,7 @@
  
 	<title>Wilfred Hughes | High signal, Low Noise</title> 
  
-	<link rel="stylesheet" href="/static/style.css" type="text/css" media="all" /> 
-	<link rel="stylesheet" href="/static/syntax.css" type="text/css" media="all" />
-	<link rel="stylesheet" href="/static/wilfred.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="/static/min.css" type="text/css" media="all" /> 
 </head> 
  
 <body> 
