--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,7 @@ body {
 	background-color: #fff;
 	color: #888;
 	font-size: 0.8em;
-	font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
+	font-family: 'Lucida Grande', Sans-Serif;
 	line-height: 1.4;
 	margin: 0;
 	padding: 0;
@@ -50,17 +50,17 @@ a:hover {
 	}
 
 #post-1 {
+	font-family: serif;
 	font-size: 3em;
         margin-bottom: -5px;
 }
 
 h1, h2, h3, h4, h5 {
-	font-family: serif;
 	font-weight: bold;
 	line-height: normal;
 	margin: 0;
 	padding: 0;
-	}
+}
 
 /*	Blog title in header */
 h1 {
@@ -132,10 +132,11 @@ p {
 	}
 
 #sidebar ul {
+	font-size: 15px;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	}
+}
 
 /*	Some space below each sublist, separating it from the next h2 header */
 #sidebar ul ul {
@@ -238,7 +239,7 @@ h2.pagetitle {
 	Width 100% required by WinIE else it just lets the overflow occur */
 .entry {
 	width: 100%;
-	font-size: 1.2em;
+	font-size: 18px;
 	margin: 1em 0 0 0;
 	overflow: auto;
 	}
@@ -352,8 +353,8 @@ ol li {
 	}
 
 code {
-	font: 1.1em monospace;
-	}
+	font: 15px monospace;
+}
 
 /*	..and the pre tag works better for whole code excerpts */
 pre {
