--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	<div id="sidebar">
 		<ul>
 			<li id="pages-2" class="widget widget_recent_entries">
-				<h2 class="widgettitle">Recent Blog Posts</h2> 
+				<h2 class="widgettitle">Recent</h2> 
 				<ul>
 					{% for post in site.posts limit: 5 %}
 					<li class="page_item"><a href="{{ post.url }}">{{ post.title }}</a></li>
