--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 <div id="page"> 
 	<div id="header"> 
 		<h1><a href="/">Wilfred Hughes::Blog</a></h1> 
-		<small>high signal, low noise</small> 
+		<small>programming, language design, and human factors</small> 
  	</div>
  
 	<div id="content">
