--- a/static/style.css
+++ b/static/style.css
@@ -166,8 +166,8 @@ p {
 	}
 
 #header {
-	margin: 4em 0 4em 0;
-	}
+	margin: 20px 0 4em 0;
+}
 
 /*	The footer resides below both the main column and the side bar (WinIE not sidebar)
 	Arial preferred over Verdana to keep text narrow enough for wayward browsers */
