--- a/static/style.css
+++ b/static/style.css
@@ -56,7 +56,7 @@ a:visited:hover {
 
 #post-1 {
 	font-family: serif;
-	font-size: 3em;
+	font-size: 2.5em;
         margin-bottom: -5px;
 }
 
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5 {
 
 /*	Blog title in header */
 h1 {
-	font-size: 3.2em;
+	font-size: 2em;
 	line-height: 1em;
         font-family: sans-serif;
 }
@@ -162,7 +162,7 @@ p {
 	}
 
 #header {
-	margin: 20px 0 4em 0;
+	margin: 20px 0 30px 0;
 }
 
 /*	content includes everything between the header and the footer. Body text dark gray */
@@ -174,7 +174,7 @@ p {
 /*	This class holds the next posts/previous posts links
 	1px lower padding just required to get Opera to honour margin setting (!) */
 .navigation {
-	margin: 0 0 1.6em 0;
+	margin: 0 0 1.0em 0;
 	padding: 0 0 1px 0;
 	font-family: 'Lucida Grande', Arial, Verdana, Sans-Serif;
 	font-size: 1.2em;
