--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,10 @@
  
 <body> 
 <div id="page"> 
-	<div id="header"> 
+	<header> 
 		<h1><a href="/">Wilfred Hughes::Blog</a></h1> 
 		<small>programming, language design, and human factors</small> 
- 	</div>
+ 	</header>
  
 	<div id="content">
 		{{ content }}
