--- a/static/style.css
+++ b/static/style.css
@@ -112,17 +112,13 @@ p {
 	margin: 0 auto 0 auto;
 	}
 
-/*	The side bar contains the menu of useful links on the left
-	Padding added just to stop Firefox overflowing this column when click and hold link */
 #sidebar {
 	width: 25%;
 	float: left;
 	text-align: right;
 	text-transform: lowercase;
 	overflow: visible;
-	margin: 3em 0 0 0;
-	padding: 0 1px 0 0;
-	}
+}
 
 /*	The main column contains everything except the side bar, and sits against the right
 	of the page */
@@ -162,7 +158,7 @@ header, #content {
 	}
 
 header {
-	margin: 20px 0 30px 0;
+	margin: 30px 0 40px 0;
 }
 
 /*	content includes everything between the header and the footer. Body text dark gray */
@@ -181,12 +177,13 @@ header {
 	}
 
 .alignright {
-	float: right;
-	}
+    float: right;
+    padding-right: 40px;
+}
 
 .alignleft {
 	float: left;
-	}
+}
 
 /*	Blocks containing only floating child elements seem to have no height. This hack allows
 	an empty, non-floating, div to be appended to give the container its true height.
