--- a/static/wilfred.css
+++ b/static/wilfred.css
@@ -7,7 +7,7 @@ p code {
 .all-posts tr {
     border: 1px solid black;
 
-    font-size: 1.2em;
+    font-size: 17px;
     padding-bottom: 0.3em;
 }
 
