--- a/static/style.css
+++ b/static/style.css
@@ -212,7 +212,7 @@ article {
 
 /*	small is used for blog tag line, the time below post titles.
  */
-small, blockquote, strike {
+small, blockquote {
     font-size: 1em;
     line-height: 1.5em;
     color: #888;
@@ -278,9 +278,9 @@ acronym, abbr {
 }
 
 blockquote {
-    margin: 1.6em 2.8em 0 1.4em;
-    padding: 0 0 0 2em;
-    border-left: 0.6em solid #ddd;
+    margin: 0;
+    padding: 0 0 0 15px;
+    border-left: 10px solid #ddd;
 }
 
 ::selection {
