meta pages no longer use .html
I believe this was broken by jekyll 3. Whilst cool URIs don't change,
these are not important changes. Going without the .html extension is
prettier too.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
 			<li id="recent-posts-2" class="widget widget_pages">
 				<h2 class="widgettitle">Meta</h2> 
 				<ul> 
-					<li><a href="/about.html">About</a></li>
-					<li><a href="/all_posts.html">All Posts</a></li>
+					<li><a href="/about">About</a></li>
+					<li><a href="/all_posts">All Posts</a></li>
 				</ul> 
 			</li>
 			<li id="recent-posts-2" class="widget widget_pages">
