Fixing styling of syntax highlighted code blocks
Jekyll now wraps code blocks in <figure>, which was causing unwanted
styling.

--- a/static/style.css
+++ b/static/style.css
@@ -267,6 +267,12 @@ pre {
     border: 1px solid #ddd;
 }
 
+.highlight > pre {
+    background-color: inherit;
+    border: 0;
+    margin: 0;
+}
+
 acronym, abbr, span.caps {
     font-size: 1em;
     letter-spacing: .08em;
