--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,6 +57,10 @@ layout: default
 {% if site.show_related_posts %}
   <h3 class="related-post-title">{{ site.text.post.related_posts }}</h3>
   {% for post in site.related_posts %}
+    {% if forloop.index == 6 %}
+    {% break %}
+    {% endif %}
+
     <div class="post ml2">
       <a href="{{ post.url | prepend: site.baseurl }}" class="post-link">
         <h4 class="post-title">{{ post.title }}</h4>
