Update RSS links

--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -30,7 +30,7 @@
     {% if site.medium_id %}
       <a class="fa fa-medium" href="https://medium.com/@{{ site.medium_id }}"></a>
     {% endif %}
-    <a class="fa fa-rss" href="{{ "/feed.xml" | prepend: site.baseurl }}"></a>
+    <a class="fa fa-rss" href="{{ "/rss.xml" | prepend: site.baseurl }}"></a>
   </div>
   <div class="right">
     {% if site.bitcoin_url %}
