Tweak figure styling
Give images borders, so they don't get lost in the text, and put
captions in italics to distinguish them

--- a/css/pixyll.scss
+++ b/css/pixyll.scss
@@ -33,3 +33,11 @@
 @import 'gists';
 @import 'measure';
 @import 'pagination';
+
+figcaption {
+    font-style: italic;
+}
+
+figure img {
+    border: 1px dotted black;
+}
