--- a/_sass/_blockquotes.scss
+++ b/_sass/_blockquotes.scss
@@ -2,7 +2,7 @@ blockquote {
   border-left: 5px solid #7a7a7a;
   font-style: italic;
   margin-left: $space-1;
-  padding: $space-1;
+  padding: 0 $space-1;
 }
 
 blockquote footer {
