--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,14 @@ layout: default
   {% include post_footer.html %}
 {% endif %}
 
+<script src="https://utteranc.es/client.js"
+        repo="wilfred/wilfred.github.com"
+        issue-term="title"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
+
 {% if site.disqus_shortname %}
   <div id="disqus_thread"></div>
   <script type="text/javascript">
