--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 {% if site.enable_anchorjs %}<!-- AnchorJS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/3.0.0/anchor.min.js"></script>
 <script>
-    anchors.options.visible = 'always';
+    anchors.options.visible = 'touch';
     anchors.add('article h2, article h3, article h4, article h5, article h6');
 </script>{% endif %}
