Fetch social icons at end of page load
This reduces the time taken to render content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
+{% if site.show_social_icons or site.show_sharing_icons %}
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+{% endif %}
+
 {% if site.enable_anchorjs %}<!-- AnchorJS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/3.0.0/anchor.min.js"></script>
 <script>
