Increase contrast on code blocks

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -93,7 +93,7 @@ $form-field-padding-x: .5rem;
 
 // Code
 $pre-border-radius: 0;
-$pre-background-color: #fafafa;
+$pre-background-color: #f4f4f4;
 $hljs-comment: $mid-gray;
 $hljs-keyword: $dark-blue;
 $hljs-name: $dark-gray;
